# translation-service

./: pyproject.toml  requirements.txt
app/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
app/templates/: index.html
