[tool.poetry]
name = "translation-service"
version = "0.1.0"
description = "A service for handling translations"
authors = ["Alex Gomes"]
package-mode = false


[tool.poetry.dependencies]
python = "3.11.4"
fastapi = "0.95.1"
uvicorn = "0.22.0"
sqlalchemy = "1.4.44"
asyncpg = "0.27.0"
psycopg2-binary = "2.9.6"
jinja2 = "3.1.2"
openai = "0.27.7"
